syntax="proto3";

package collection;

import "google/protobuf/timestamp.proto";

option go_package="./proto/collection";

message Collection {
    string CollectionID = 1;
    int32 SerialNumber = 2;
    string AccountType = 3;
    string AccountNumber = 4;
    string Sender = 5;
    string Date = 6;
    int32 Amount = 7;
    string Currency = 8;
    google.protobuf.Timestamp CreatedAt = 9;
    string CreatedBy = 10;
    google.protobuf.Timestamp UpdatedAt = 11;
    string UpdatedBy = 12;
    google.protobuf.Timestamp DeletedAt = 13;
    string DeletedBy = 14;
}

message Filter {
    int32 Offset = 1;
    int32 Limit = 2;
    string SortBy = 3;
    string Order = 4;
    string SearchTerm = 5;
}

message Stats {
    int32 Count = 1;
    int32 TotalAmount = 2;
}

message CreateCollectionRequest {
    Collection Coll = 1;
}

message CreateCollectionResponse {
    string CollectionID = 1;
}

message GetCollectionRequest {
    Collection Coll = 1;
}

message GetCollectionResponse {
    Collection Coll = 1;
}

message UpdateCollectionRequest {
    Collection Coll = 1;
}

message UpdateCollectionResponse {
    Collection Coll = 1;
}

message DeleteCollectionRequest {
    Collection Coll = 1;
}

message DeleteCollectionResponse {}

message ListCollectionRequest {
    Filter Filter = 1;
}

message ListCollectionResponse {
   repeated Collection Coll = 1;
}

message CollectionStatsRequest {
    Filter Filter = 1;
}

message CollectionStatsResponse {
    Stats Stats = 1;
}

service CollectionService {
    rpc CreateCollection(CreateCollectionRequest) returns(CreateCollectionResponse) {}
    rpc GetCollection(GetCollectionRequest) returns(GetCollectionResponse) {}
    rpc UpdateCollection(UpdateCollectionRequest) returns(UpdateCollectionResponse) {}
    rpc DeleteCollection(DeleteCollectionRequest) returns(DeleteCollectionResponse) {}
    rpc ListCollection(ListCollectionRequest) returns(ListCollectionResponse) {}
    rpc CollectionStats(CollectionStatsRequest) returns(CollectionStatsResponse) {}
}